--- a/ExHtml/index.htm
+++ b/ExHtml/index.htm
@@ -13,7 +13,9 @@
                 <label for="name">Nome</label>
                 <input id="name" type="text" placeholder="Nome completo"><br/>
                 <label for="email">E-mail</label>
-                <input id="email" type="text" placeholder="address@email.com"><br/>
+                <input id="email" type="email" placeholder="address@email.com"><br/>
+                <label for="password">Senha</label>
+                <input id="password" type="password" placeholder="Digite a senha"><br/>
                 <button type="submit">Cadastrar</button>
             </form>
         </section>
