--- a/ExHtml/index.htm
+++ b/ExHtml/index.htm
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +17,8 @@
                 <input id="email" type="email" placeholder="address@email.com"><br/>
                 <label for="password">Senha</label>
                 <input id="password" type="password" placeholder="Digite a senha"><br/>
-                <button type="submit">Cadastrar</button>
+                <button class="xalala" type="submit">Cadastrar</button>
+                <button class="buttonReset" type="reset">Limpar Campos</button>
             </form>
         </section>
     </main>
